# openVO

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
examples/: odometer.py
examples/data/calibration/: intrinsics_left.p  intrinsics_right.p  leftDistC.npy  leftK.npy  rectParams.p  rightDistC.npy  rightK.npy  sgbmParams.p
examples/data/videos/grass/: stereo_left.avi.REMOVED.git-id  stereo_right.avi.REMOVED.git-id
examples/data/videos/pavement/: stereo_left.avi.REMOVED.git-id  stereo_right.avi.REMOVED.git-id
examples/data/videos/rocks/: stereo_left.avi.REMOVED.git-id  stereo_right.avi.REMOVED.git-id
examples/oakd/: camera.py  odometer.py
scripts/: calibrate_stereo_cameras.py  find_sgbm_params.py  stereo_rectification.py  test_calibration.py
scripts/oakd/: calibration_reader.py  compare_rect.py  find_hyperparameters.py
src/openVO/: __init__.py  abstract_camera.py  abstract_odometer.py  camera.py  stereo_camera.py  stereo_odometer.py
src/openVO/oakd/: __init__.py  camera.py  oak_camera.py  oak_odometer.py  odometer.py  pose_fusion.py  projector_3d.py
src/openVO/odometry/: __init__.py  funcs.py
src/openVO/odometry/jit/: __init__.py  jit_funcs.py
src/openVO/utils/: drawPoseOnImage.py  rot2RPY.py
tests/: compare.py  oakd.py
tests/oakd/: camera.py  odometer.py
